--- a/index.html
+++ b/index.html
@@ -308,5 +308,13 @@
     </div>
     
     <script src="main.js"></script>
+    <audio autoplay loop>
+  <source src="happybirthday.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
+<div id="typewriter-text"></div>
+<script src="main.js"></script>
+    
   </body>
 </html>
